--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,7 +5,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-<script type="text/javascript" src="~/js/entrance.js"></script>
+@section Entrance {
+    <script type="text/javascript">
+        Entrance()
+    </script>
+}
 
 <div class="jumbotron shadowed">
     <h2>
