--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,21 +54,16 @@
 
         </div>
     </nav>
+    
     <div class="container body-content">
         @RenderBody()
-        <!--
-        <hr />
-        
-        <footer>
-            <p>&copy; 2017 - Promises</p>
-        </footer>
-            -->
     </div>
 
     <environment include="Development">
         <script type="text/javascript" src="~/lib/jquery/jquery.js"></script>
         <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
+        <script type="text/javascript" src="~/js/out/bundle.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
@@ -84,8 +79,11 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
+        <script type="text/javascript" src="~/js/out/bundle.min.js"></script>
     </environment>
 
+    
+    @RenderSection("Entrance", required: false)
     @RenderSection("Scripts", required: false)
     
 </body>
