#23 shows users's profile page when clicking on a corresponding link
I don't like the way I did it.  Should change the architecture of views

--- a/Views/Cabinet/Profile.cshtml
+++ b/Views/Cabinet/Profile.cshtml
@@ -4,6 +4,7 @@
 @{
     ViewData["Title"] = "Profile";
     ViewData.AddActivePage(CabinetNavPages.Profile);
+    ViewData.AddProfileViewModel(Model);
 }
 
 @Html.Partial("_ModalCompletePromise")
