--- a/Views/Cabinet/_OtherUserProfile.cshtml
+++ b/Views/Cabinet/_OtherUserProfile.cshtml
@@ -1,1 +1,5 @@
-﻿
+﻿@model ProfileViewModel
+
+<img style="display:block; margin:auto; width:100%"
+     src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250, quality=100, userId = @Model.Id })"
+     class="img-responsive img-rounded main-avatar" alt="Avatar" />
