--- a/Views/Cabinet/PrivateChat.cshtml
+++ b/Views/Cabinet/PrivateChat.cshtml
@@ -2,7 +2,7 @@
 @model PrivateChatViewModel
 @{
     ViewData["Title"] = "PrivateChat";
-    ViewData.AddActivePage(CabinetNavPages.PrivateChat);
+    ViewData.AddActivePage(CabinetNavPages.Messages);
 }
 
 <!--/ Now we are able to read model from JavaSctipr -->
