--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -37,7 +37,7 @@
     } 
     <script type="text/javascript">
         //TODO rewrite
-        $.get('@Url.Action("GetUnreadAmount", "Cabinet")', v => $("#_messages_nav_id").html("Messages " + (v == 0 ? "" : "(" + v + ")")))
+        $.get('@Url.Action("GetUnreadAmount", "Cabinet")', v => $("#_messages_nav_id").html((v == 0 ? "" : v )))
         let _RAZOR_URL_CABINET_PRIVATE_CHAT = '@Url.Action("PrivateChat", "Cabinet", new { friendId = "__id__", friendEmail = "__email__" })'
         let _RAZOR_URL_CABINET_GET_AVATAR = '@Url.Action("GetAvatarImage", "Cabinet", new { width ="__width__", height="__height__", quality="__quality__", userId = "__id__" })'
         let _RAZOR_PROFILE_LINK = '@Url.Action("Profile", "Cabinet", new { userId = "__id__"})'
