--- a/Views/Cabinet/_OtherUserProfile.cshtml
+++ b/Views/Cabinet/_OtherUserProfile.cshtml
@@ -2,4 +2,4 @@
 
 <img style="display:block; margin:auto; width:100%"
      src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250, quality=100, userId = @Model.Id })"
-     class="img-responsive img-rounded main-avatar" alt="Avatar" />
+     class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
