--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -1,4 +1,4 @@
 ﻿
 <img style="display:block; margin:auto; width:100%" 
      src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250 })"
-     class="img-responsive img-rounded main-avatar" alt="Avatar" />
+     class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
