#26 some remarks were resolved

--- a/Views/Cabinet/Profile.cshtml
+++ b/Views/Cabinet/Profile.cshtml
@@ -13,13 +13,9 @@
     <div class="row">
         <div class="col-sm-7">
 
-            <div class="jumbotron">
-                <h1 class="display-3">@Model.Email</h1>
-            </div>
             
-            <hr />
             <div class="promise-stats-block">
-                <h4>Completed promises rating</h4>
+                <h4>Statistics</h4>
                 <h2 class="bold padding-bottom-7" id="_completed_rating_id">0 <small>/ 5</small></h2>
                 <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
