--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -25,6 +25,8 @@
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
+                    <li>Logged in as @user.Email</li>
+                    <li class="divider"></li>
                     <li><a href="#">Profile</a></li>
                     <li><a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Settings</a></li>
                     <li><a data-toggle="modal" data-target="#_payment_details">Payment details</a></li>
