--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -1,8 +1,4 @@
-﻿@inject UserManager<ApplicationUser> userManager
-
-@{
-    var owner = await userManager.GetUserAsync(User);
-}
+﻿@model ProfileViewModel
 
 <div class="thumbnail">
     <img style="display:block; margin:auto; width:100%"
@@ -10,8 +6,8 @@
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
     <div class="caption">
-        <h3>@owner.Email</h3>
-        <a href="#" class="btn btn-link" role="button">Info</a>
+        <h3>@Model.Email</h3>
+        <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_payment_details">Info</a>
         <a href="#" class="btn btn-link" role="button">Transactions</a>
     </div>
 </div>
