--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,10 +14,10 @@
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <button type="button" class="btn btn-link navbar-btn navbar-link"> NEO : @balances.NEO </button>
+                <button id="_testnet_neo" type="button" class="btn btn-link navbar-btn navbar-link"> NEO : @balances.NEO </button>
             <li>
             <li>
-                <button type="button" class="btn btn-link navbar-btn navbar-link"> GAS : @balances.GAS </button>
+                <button id="_testnet_gas" type="button" class="btn btn-link navbar-btn navbar-link"> GAS : @balances.GAS </button>
 
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -25,13 +25,12 @@
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li>Logged in as @user.Email</li>
+                    <li class="container-fluid"><small class="text-muted">Logged in as <span class="bold">@user.Email</span></small></li>
                     <li class="divider"></li>
-                    <li><a href="#">Profile</a></li>
-                    <li><a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage">Settings</a></li>
-                    <li><a data-toggle="modal" data-target="#_payment_details">Payment details</a></li>
+                    <li><a role="button"><span class="text-muted">Profile</span></a></li>
+                    <li><a asp-area="" asp-controller="Manage" asp-action="Index" title="Manage"><span class="text-muted">Settings</span></a></li>
                     <li class="divider"></li>
-                    <li><button style="background-color:#ffffff; color:#808080" type="submit" class="btn btn-block">Log out</button></li>
+                    <li><a role="button" onclick="document.getElementById('logoutForm').submit()"><span class="text-muted">Log out</span></a></li>
                 </ul>
             </li>
             
