--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -3,7 +3,7 @@
 
 <div class="modal fade" id="_modal_pay" role="dialog">
     <div class="modal-dialog">
-        
+
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -13,34 +13,35 @@
                 <small id="_address_to_pay_label" class="bold">@Model.Address</small>
             </div>
             <div class="container-fluid">
-                <div class="form-group">
-                    <label>Asset type</label>
-                    <select class="form-control" id="_asset_type">
-                        <option>NEO</option>
-                        <option>GAS</option>
-                    </select>
-                </div>
+                <form>
+                    <div class="form-group">
+                        <label>Asset type</label>
+                        <select class="form-control" id="_asset_type">
+                            <option>NEO</option>
+                            <option>GAS</option>
+                        </select>
+                    </div>
 
-                <div class="form-group">
-                    <label>Network type</label>
-                    <select class="form-control" id="_net_type">
-                        <option>TestNet</option>
-                        <option>MainNet</option>
-                    </select>
-                </div>
+                    <div class="form-group">
+                        <label>Network type</label>
+                        <select class="form-control" id="_net_type">
+                            <option>TestNet</option>
+                            <option>MainNet</option>
+                        </select>
+                    </div>
 
-                <div class="form-group">
-                    <label>Amount</label>
-                    <input id="_asset_amount" type="number" class="form-control" placeholder="Type amount to send">
-                    <span class="pull-right"><small id="_modal_pay_hint" class=""></small></span>
-                </div>
+                    <div class="form-group">
+                        <label>Amount</label>
+                        <input id="_asset_amount" type="number" class="form-control" placeholder="Type amount to send">
+                    </div>
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button id="_send_asset" type="button" class="btn btn-primary">Send</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
         </div>
 
-        <div class="modal-footer">
-            <button id="_send_asset" type="button" class="btn btn-primary">Send</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
     </div>
-
-</div>
 </div>
