--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -5,9 +5,11 @@
 }
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
-<p>
-    <input class="input-style" id="_find_input" type="text" placeholder=" Type email to find a person">
-</p>
+
+<div class="input-group">
+    <span class="glyphicon glyphicon-search input-group-addon " id="sizing-addon1"></span>
+    <input id="_find_input" type="text" class="form-control input-style" placeholder=" Type email to find a person" aria-describedby="sizing-addon1">
+</div>
 
 <div id="_loader_id"></div>
 <h4 id="_friends_label_id"></h4> 
