--- a/Views/Cabinet/Friends.cshtml
+++ b/Views/Cabinet/Friends.cshtml
@@ -6,7 +6,7 @@
 
 <!--/ It's used to be able to be redirected to another MVC page from javascript-->
 
-<div class="input-group">
+<div id="_friend_find_input" class="input-group">
     <span class="glyphicon glyphicon-search input-group-addon " id="sizing-addon1"></span>
     <input id="_find_input" type="text" class="form-control input-style" placeholder=" Type email to find a person" aria-describedby="sizing-addon1">
 </div>
