--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -17,16 +17,16 @@
                     <div class="form-group">
                         <label>Asset type</label>
                         <select class="form-control" id="_asset_type">
-                            <option>NEO</option>
-                            <option>GAS</option>
+                            <option value="neo">NEO</option>
+                            <option value="gas">GAS</option>
                         </select>
                     </div>
 
                     <div class="form-group">
                         <label>Network type</label>
                         <select class="form-control" id="_net_type">
-                            <option>TestNet</option>
-                            <option>MainNet</option>
+                            <option value="testnet">TestNet</option>
+                            <option value="neo">MainNet</option>
                         </select>
                     </div>
 
