#23 added payment details (qr code and other stuff)

--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -76,7 +76,9 @@
 
     <script type="text/javascript">
         Notification()
+        GenerateQrAddressCode()
     </script>
+
 
     @if (!profileViewModel.IsYourProfile)
     {
