--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -15,7 +15,7 @@
             <div class="container-fluid">
                 <form>
                     <div class="form-group">
-                        <label>Asset type</label>
+                        <h5 class="bold">Asset type</h5>
                         <select class="form-control" id="_asset_type">
                             <option value="neo">NEO</option>
                             <option value="gas">GAS</option>
@@ -23,7 +23,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Network type</label>
+                        <h5 class="bold">Network type</h5>
                         <select class="form-control" id="_net_type">
                             <option value="testnet">TestNet</option>
                             <option value="neo">MainNet</option>
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label>Amount</label>
+                        <h5 class="bold">Amount</h5>
                         <input id="_asset_amount" type="number" class="form-control" placeholder="Type amount to send">
                     </div>
                 </form>
