--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
         <script type="text/javascript" src="~/lib/jquery/jquery.js"></script>
         <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
+        <script type="text/javascript" src="~/lib/qrcode-js/qrcode.js"></script>
         <script type="text/javascript" src="~/js/out/bundle.js"></script>
     </environment>
     <environment exclude="Development">
@@ -81,7 +82,9 @@
                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa">
         </script>
         <script type="text/javascript" src="~/lib/signalr-client/signalr-client.js"></script>
+        <script type="text/javascript" src="~/lib/qrcode-js/qrcode.js"></script>
         <script type="text/javascript" src="~/js/out/bundle.min.js"></script>
+        
     </environment>
 
     
