--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -5,9 +5,9 @@
          src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250 })"
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
-    <div class="caption">
+    <div align="center" class="caption">
         <h3>@Model.Email</h3>
         <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_payment_details">Info</a>
-        <a href="#" class="btn btn-link" role="button">Transactions</a>
+        <a role="button" class="btn btn-link" data-toggle="modal" data-target="#_transaction_history_modal">History</a>
     </div>
 </div>
