--- a/Views/Cabinet/Profile.cshtml
+++ b/Views/Cabinet/Profile.cshtml
@@ -32,9 +32,12 @@
                 <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
                 </button>
-                <span class="pull-right">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#_fill_promise_modal">Post promise</button>
-                </span>
+                @if (Model.IsYourProfile)
+                {
+                    <span class="pull-right">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#_fill_promise_modal">Post promise</button>
+                    </span>
+                }
             </div>
         </div>
     </div>
