--- a/Views/Cabinet/_ModalPay.cshtml
+++ b/Views/Cabinet/_ModalPay.cshtml
@@ -10,7 +10,7 @@
                 <div align="right" id="_modal_pay_loader"></div>
                 <h4 class="text-success" id="_modal_pay_result"></h4>
                 <h4 class="modal-title">Pay to <span class="bold">@Model.Email</span></h4>
-                <small id="_address_to_pay_label" class="bold">@Model.Address</small>
+                <small id="_address_to_pay_label" class="text-muted">@Model.Address</small>
             </div>
             <div class="container-fluid">
                 <form>
@@ -26,7 +26,7 @@
                         <h5 class="bold">Network type</h5>
                         <select class="form-control" id="_net_type">
                             <option value="testnet">TestNet</option>
-                            <option value="neo">MainNet</option>
+                            <!--<option value="neo">MainNet</option>-->
                         </select>
                     </div>
 
