--- a/Views/Cabinet/_ModalTransactionHistory.cshtml
+++ b/Views/Cabinet/_ModalTransactionHistory.cshtml
@@ -6,7 +6,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Transaction history</h4>
-                <small class="text-muted">@Model.Address</small>
+                <small class="text-muted">@Model.Address (TestNet)</small>
             </div>
             <div align="center" class="container-fluid">
                     <div class="loader" id="_modal_tx_loader"></div>
