--- a/Views/Cabinet/Profile.cshtml
+++ b/Views/Cabinet/Profile.cshtml
@@ -17,27 +17,12 @@
             
             <div class="promise-stats-block">
                 <h4>Statistics</h4>
-                <h2 class="bold padding-bottom-7" id="_completed_rating_id">0 <small>/ 5</small></h2>
-                <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-warning btn-sm" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
-                <button type="button" class="btn btn-default btn-grey btn-sm" aria-label="Left Align">
-                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
-                </button>
+                <h2 class="bold padding-bottom-7" id="_completed_rating_id"></h2>
                 @if (Model.IsYourProfile)
                 {
-                    <span class="pull-right">
+                    <div align="right"> 
                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#_fill_promise_modal">Post promise</button>
-                    </span>
+                    </div>
                 }
             </div>
         </div>
@@ -46,7 +31,7 @@
     <div class="row">
         <div class="col-sm-7">
             <hr/>
-            <div class="loader" id="_promises_loader">
+            <div class="loader" id="_promises_loader"></div>
             <div id="_promises_id"></div>
            
         </div>
