--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -14,7 +14,10 @@
             Id = owner.Id,
             Address = owner.Address,
             IsYourProfile = true,
-            IsOnline = true
+            IsOnline = true,
+            Avatar = owner.Avatar,
+            AvatarContentType = owner.AvatarContentType
+            
         };
     }
 }
