--- a/Views/Cabinet/_OtherUserProfile.cshtml
+++ b/Views/Cabinet/_OtherUserProfile.cshtml
@@ -1,13 +1,14 @@
 ﻿@model ProfileViewModel
 
 @{
+    var base64 = Convert.ToBase64String(Model.Avatar);
+    var avatar = String.Format("data:{0};base64,{1}", Model.AvatarContentType, base64);
     var status = @Model.IsOnline ? "online" : "offline";
 }
 
-
 <div class="thumbnail">
     <img style="display:block; margin:auto; width:100%"
-         src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250, quality = 100, userId = Model.Id })"
+         src="@avatar" width="300" height="250"
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
     <div align="center" class="caption">
