--- a/Views/Cabinet/_YourProfile.cshtml
+++ b/Views/Cabinet/_YourProfile.cshtml
@@ -1,8 +1,13 @@
 ﻿@model ProfileViewModel
 
+@{
+    var base64 = Convert.ToBase64String(Model.Avatar);
+    var avatar = String.Format("data:{0};base64,{1}", Model.AvatarContentType, base64);
+}
+
 <div class="thumbnail">
     <img style="display:block; margin:auto; width:100%"
-         src="@Url.Action("GetAvatarImage", "Cabinet", new { width = 300, height = 250 })"
+         src="@avatar" width = "300" height = "250"
          class="img-responsive img-thumbnail main-avatar" alt="Avatar" />
 
     <div align="center" class="caption">
