--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,11 +14,11 @@
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <button id="_testnet_neo" type="button" class="btn btn-link navbar-btn navbar-link"> NEO : @balances.NEO </button>
+                <span class="navbar-text">NEO : @balances.NEO</span>
+            </li>
             <li>
-            <li>
-                <button id="_testnet_gas" type="button" class="btn btn-link navbar-btn navbar-link"> GAS : @balances.GAS </button>
-
+                <span class="navbar-text">GAS : @balances.GAS</span>
+            </li>
             <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                     Menu
