--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Promises</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Smart Promise</a>
             </div>
 
             <div class="collapse navbar-collapse">
