--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,9 @@
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
+                <button id="_testnet_neo" type="button" class="btn btn-link navbar-btn"> TestNet </button>
+            </li>
+            <li>
                 <button id="_testnet_neo" type="button" class="btn btn-link navbar-btn"> NEO : @balances.NEO </button>
             </li>
             <li>
