fixed some bugs

--- a/Views/Cabinet/_ModalCreatePromise.cshtml
+++ b/Views/Cabinet/_ModalCreatePromise.cshtml
@@ -6,6 +6,8 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Creating promise</h4>
+                <div align="right" id="_modal_create_promise_loader"></div>
+                <h4 class="text-success" id="_modal_create_promise_result"></h4>
             </div>
             <div class="container-fluid">
                 <form>
