--- a/Views/Cabinet/_Layout.cshtml
+++ b/Views/Cabinet/_Layout.cshtml
@@ -76,8 +76,10 @@
         let _RAZOR_GET_MY_ADDRESS = '@Url.Action("GetMyAddress", "Friends")'
         let _RAZOR_SEND_ASSET = '@Url.Action("SendAsset", "Blockchain", new { type = "__network__", assetName = "__assetName__", addr = "__addr__", amount = "__amount__" })'
         let _RAZOR_ADD_PROMISE = '@Url.Action("Add", "Promises", new { title = "__title__", content = "__content__", complicity = "__complicity__", date = "__date__" })'
-        let _RAZOR_GET_PROMISES = '@Url.Action("Get", "Promises")'
+        let _RAZOR_GET_PROMISES = '@Url.Action("Get", "Promises", new { address = "__address__" })'
         let _RAZOR_COMPLETE_PROMISE = '@Url.Action("Complete", "Promises", new { id = "__id__"})'
+
+        let _RAZOR_PROFILE_VIEW_USER_ADDRESS = '@profileViewModel.Address'
 
         let _RAZOR_NOTIFICATION_CONNECTION = new signalR.HubConnection('/notification')
         _RAZOR_NOTIFICATION_CONNECTION.start()
